--- a/src/style/generals.scss
+++ b/src/style/generals.scss
@@ -10,9 +10,11 @@ img {
   width: 100%;
 }
 
-body {
+* {
   // font-family: "Rambla", sans-serif;
   font-family: "Saira Condensed", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 ul > li {
